# tt_youtube_reports_cli

./: .coverage  .gitignore  README.md  pyproject.toml  ruff.toml  ty.toml
data/: stats1.csv  stats2.csv
src/report_cli/: cli.py  readers.py  report_generator.py
tests/: test_cli.py  test_reader.py  test_report.py
